Fix quote alignment in the page.

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 *, html {
     margin:0;
-
 }
 .header {
     background-color: #1f2937; 
@@ -111,12 +110,14 @@
 .quote{
     background-color: #e5e7eb;
     justify-content: center;
-    padding-left: 100px;
-    padding-right: 100px;
-  
+    padding-left: 300px;
+    padding-right: 300px;
+}
+.quote-box {
 }
 .quote-text {
     font-size: 36px;
     font-style: italic;
     color: #1f2937;
+    text-align: center;
 }
